--- a/chat/chat.client/worker.html
+++ b/chat/chat.client/worker.html
@@ -24,7 +24,7 @@
   </body>
 </html>
 
-<script src="node_modules/socket.io-client/dist/socket.io.js"></script>
+<script src="../../node_modules/socket.io-client/dist/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <script>
